k8s/1-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example
  namespace: example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example
  template:
    metadata:
      labels:
        app: example
    spec:
      containers:
        - name: example
          image: elmariofredo/java-in-k8s:v1.0
          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "500m"
              memory: "128Mi"
            limits:
              cpu: "1000m"
              memory: "128Mi"

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            failureThreshold: 3
            periodSeconds: 5

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            failureThreshold: 3
            periodSeconds: 10

          # startupProbe:
          #   httpGet:
          #     path: /actuator/health/liveness
          #     port: 8080
          #   failureThreshold: 30
          #   periodSeconds: 10

          # lifecycle:
          #   preStop:
          #     exec:
          #       command: ["sh", "-c", "sleep 10"]
