k8s/2-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example
  namespace: example
spec:
  selector:
    app: example
  ports:
  - port: 8080
