k8s/3-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
  namespace: example
  labels:
    name: example
spec:
  ingressClassName: "nginx"
  rules:
    - host: "java-in-k8s.sikalabs.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: example
                port:
                  number: 8080
